fixed footer position, using flexbox to get rid of a white space at the bottom

--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -77,7 +77,7 @@
     #dots {
       position: absolute;
       left: 5%;
-      top: 75.4%;
+      top: 37.6%;
       width: 100px;
      }
 
