--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,17 +14,25 @@
   padding: 0
 }
 
-body {
-  margin: 0;
-  padding: 0;
+html{
   height: 100%;
-  max-width: 100%;
+}
+
+body {
+  // margin: 0;
+  // padding: 0;
+  // height: 100%;
+  // max-width: 100%;
   font-weight: 700;
   font-style: normal;
   font-family: "acumin-pro", sans-serif;
   font-weight: 400;
   font-style: normal;
-  position: relative;
+  // position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+
 }
 
 .container {
@@ -40,6 +48,14 @@ h3 {
 }
 
 .footer-text{
-  position: absolute;
-  width: 100%;
+  margin-top: auto;
+  // position: absolute;
+  // width: 100%;
+
+  // position: fixed;
+  // left: 0;
+  // bottom: 0;
+  // width: 100%;
+  // text-align: center;
 }
+
